--- a/src/styles/Career.css
+++ b/src/styles/Career.css
@@ -1,29 +1,57 @@
 .career {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .career-1 {
-    border: rgba(255, 249, 242, 0.2) ridge 5px;
+    border: rgba(255, 249, 242, 0.2) ridge 2px;
+    border-right: none;
     border-top-left-radius: 35px;
     border-bottom-left-radius: 35px;
-    margin-top: -60px;
+    border-top-right-radius: 35px;
+    padding: 10px;
+    margin-top: -30px;
     background-color: #FFF9F2;
     height: 400px;
+    width: 25%;
 }
 
 .career-2 {
-    border: rgba(242, 252, 255, 0.2) ridge 5px;
-    margin-top: 10px;
+    border: rgba(242, 252, 255, 0.2) ridge 2px;
+    border-right: none;
+    border-left: none;
+    border-top-right-radius: 35px;
+    border-bottom-left-radius: 35px;
+    padding: 10px;
     background-color: #F2FCFF;
     height: 400px;
+    width: 25%;
 }
 
 .career-3 {
-    border: rgba(134, 168, 179, 0.2) ridge 5px;
+    border: rgba(134, 168, 179, 0.2) ridge 2px;
+    border-left: none;
     border-top-right-radius: 35px;
     border-bottom-right-radius: 35px;
-    margin-top: 70px;
+    border-bottom-left-radius: 35px;
+    padding: 10px;
+    margin-top: 30px;
     background-color: #86A8B3;
     height: 400px;
+    width: 25%;
+}
+
+h2, h3 {
+    text-align: center;
+    font-family: "Courgette", cursive;
+}
+
+p {
+    text-align: justify;
+}
+
+li {
+    list-style:none;
+    text-align: center;
+    line-height: 2em;
 }
