--- a/src/styles/Portofolio.css
+++ b/src/styles/Portofolio.css
@@ -6,9 +6,9 @@
 }
 
 .link_portofolio {
+  position: relative;
   width: 450px;
   height: 450px;
-  border: black 5px solid;
   margin: 20px;
 }
 
@@ -19,9 +19,13 @@
 }
 
 .link_portofolio figure img {
-    width: 100%;
+  width: 100%;
   height: 100%;
   overflow: hidden;
   object-fit: cover;
   margin: 0;
+}
+
+.link_portofolio:hover {
+  opacity: 0.8;
 }
