--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -1,5 +1,6 @@
 header {
   font-family: "Courgette", cursive;
+  background: #FFF9F2;
 }
 
 .wedev_banner {
@@ -65,4 +66,23 @@ header {
   position: absolute;
   opacity: 0;
   pointer-events: none;
+}
+
+.switch_btn {
+  position: relative;
+  top: -4px;
+  left: -4px;
+  cursor: pointer;
+}
+
+.switch_btn::before {
+  content: "";
+  display: block;
+  border: white solid 2px;
+  border-radius: 100%;
+  height: 1.2em;
+  width: 1.2em;
+  margin: 0;
+  background: rgb(242,252,255);
+  background: radial-gradient(circle, rgba(242,252,255,1) 44%, rgba(255,255,255,1) 100%); 
 }
