--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -87,7 +87,7 @@ header {
   height: 1.2em;
   width: 3em;
   margin: 0;
-  transition: transform 200ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
   background: rgb(242, 252, 255);
   background: radial-gradient(
     circle,
@@ -107,6 +107,7 @@ header {
   height: 1.1em;
   width: 1.1em;
   margin: 0;
+  transition: transform 600ms cubic-bezier(.29,.42,1,0);
   background: rgb(254, 255, 0);
   background: linear-gradient(
     45deg,
@@ -116,5 +117,5 @@ header {
 }
 
 .switch_box:checked + .switch_btn::after {
-  transform: translate(100%, 0) rotate(180deg);
+  transform: translate(100%) rotate(180deg);
 }
