--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -87,19 +87,24 @@ header {
   height: 1.2em;
   width: 3em;
   margin: 0;
-  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
-  background: rgb(242, 252, 255);
-  background: radial-gradient(
-    circle,
-    rgba(242, 252, 255, 1) 44%,
-    rgba(255, 255, 255, 1) 100%
-  );
+  transition: background 100ms cubic-bezier(0.29, 0.42, 1, 0) 50ms;
+  background: rgb(242, 252, 255)
+    radial-gradient(
+      circle,
+      rgba(242, 252, 255, 1) 44%,
+      rgba(255, 255, 255, 1) 100%
+    );
+}
+
+.switch_box:checked + .switch_btn::before {
+  background: rgb(23,11,122) radial-gradient(circle, rgba(23,11,122,1) 34%, rgba(21,25,182,1) 100%)
+
 }
 
 .switch_btn::after {
   content: "";
   position: absolute;
-  top: 1px;
+  top: 1.5px;
   left: 4px;
   display: block;
   border: rgba(254, 255, 0, 0.8) solid 1px;
@@ -107,15 +112,14 @@ header {
   height: 1.1em;
   width: 1.1em;
   margin: 0;
-  transition: transform 600ms cubic-bezier(.29,.42,1,0);
-  background: rgb(254, 255, 0);
-  background: linear-gradient(
-    45deg,
-    rgba(254, 255, 0, 1) 0%,
-    rgba(202, 226, 0, 1) 82%
-  );
+  background: rgb(254, 255, 0)
+    linear-gradient(45deg, rgba(254, 255, 0, 1) 0%, rgba(202, 226, 0, 1) 82%);
+  transition: transform 150ms cubic-bezier(0.29, 0.42, 1, 0);
 }
 
 .switch_box:checked + .switch_btn::after {
-  transform: translate(100%) rotate(180deg);
+  transform: translate(125%) rotate(180deg);
+  border: rgb(0, 0, 0) solid 1px;
+  background: rgb(0, 0, 0)
+    radial-gradient(circle, rgba(0, 0, 0, 1) 0%, rgba(132, 133, 125, 1) 81%);
 }
