--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -97,8 +97,8 @@ header {
 }
 
 .switch_box:checked + .switch_btn::before {
-  background: rgb(23,11,122) radial-gradient(circle, rgba(23,11,122,1) 34%, rgba(21,25,182,1) 100%)
-
+  background: rgb(23, 11, 122)
+    radial-gradient(circle, rgba(23, 11, 122, 1) 34%, rgba(21, 25, 182, 1) 100%);
 }
 
 .switch_btn::after {
