--- a/src/styles/Career.css
+++ b/src/styles/Career.css
@@ -14,6 +14,7 @@
     background-color: #FFF9F2;
     height: 400px;
     width: 25%;
+    z-index: 2;
 }
 
 .career-2 {
@@ -26,6 +27,7 @@
     background-color: #F2FCFF;
     height: 400px;
     width: 25%;
+    z-index: 2;
 }
 
 .career-3 {
@@ -39,6 +41,7 @@
     background-color: #86A8B3;
     height: 400px;
     width: 25%;
+    z-index: 2;
 }
 
 h2, h3 {
