--- a/src/styles/Career.css
+++ b/src/styles/Career.css
@@ -1,71 +1,60 @@
 .career {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .career-1 {
-    border: rgba(255, 249, 242, 0.2) ridge 2px;
-    border-right: none;
-    border-radius: 35px;
-    border-top-left-radius: 35px;
-    border-bottom-left-radius: 35px;
-    border-top-right-radius: 35px;
-    padding: 10px;
-    margin-top: -70px;
-    background-color: #FFF9F2;
-    height: 30em;
-    width: 20%;
-    z-index: 2;
+  border: rgba(255, 249, 242, 0.2) ridge 2px;
+  border-radius: 35px;
+  padding: 10px;
+  margin-top: -70px;
+  background-color: #fff9f2;
+  height: 30em;
+  width: 20%;
+  z-index: 2;
 }
 
 .career-2 {
-    border: rgba(242, 252, 255, 0.2) ridge 2px;
-    border-right: none;
-    border-left: none;
-    border-radius: 35px;
-    /* border-top-right-radius: 35px;
-    border-bottom-left-radius: 35px; */
-    padding: 10px;
-    margin-top: -20px;
-    margin-left: -15px;
-    background-color: #F2FCFF;
-    height: 30em;
-    width: 20%;
-    z-index: 2;
+  border: rgba(242, 252, 255, 0.2) ridge 2px;
+  border-radius: 35px;
+  padding: 10px;
+  margin-top: -20px;
+  margin-left: -15px;
+  background-color: #86a8b3;
+  height: 30em;
+  width: 20%;
+  z-index: 2;
 }
 
 .career-3 {
-    border: rgba(134, 168, 179, 0.2) ridge 2px;
-    border-left: none;
-    border-radius: 35px;
-    border-top-right-radius: 35px;
-    border-bottom-right-radius: 35px;
-    border-bottom-left-radius: 35px;
-    padding: 10px;
-    margin-top: 30px;
-    margin-left: -15px;
-    background-color: #86A8B3;
-    height: 30em;
-    width: 20%;
-    z-index: 2;
+  border: rgba(134, 168, 179, 0.2) ridge 2px;
+  border-radius: 35px;
+  padding: 10px;
+  margin-top: 30px;
+  margin-left: -15px;
+  background-color: #f2fcff;
+  height: 30em;
+  width: 20%;
+  z-index: 2;
 }
 
-h2, h3 {
-    text-align: center;
-    font-family: "Courgette", cursive;
+h2,
+h3 {
+  text-align: center;
+  font-family: "Courgette", cursive;
 }
 
 p {
-    text-align: justify;
-    padding: 5px 13px 5px 10px;
+  text-align: justify;
+  padding: 5px 13px 5px 10px;
 }
 
 .list_career {
-    padding: 0;
+  padding: 0;
 }
 
 li {
-    list-style:none;
-    text-align: center;
-    line-height: 2em;
+  list-style: none;
+  text-align: center;
+  line-height: 2em;
 }
