--- a/src/styles/Portofolio.css
+++ b/src/styles/Portofolio.css
@@ -27,9 +27,9 @@
   margin: 0;
 }
 
-.link_portofolio figure img {
-  width: 100%;
-  height: 100%;
+.img_portofolio {
+  width: 450px;
+  height: 450px;
   overflow: hidden;
   object-fit: cover;
   margin: 0;
