--- a/src/styles/Portofolio.css
+++ b/src/styles/Portofolio.css
@@ -44,6 +44,13 @@
   margin: 0;
 }
 
+.text_portofolio {
+  position: absolute;
+  top: 100px;
+  padding: 50px;
+  text-align: center;
+}
+
 .img_portofolio {
   width: 450px;
   height: 450px;
