--- a/src/styles/Portofolio.css
+++ b/src/styles/Portofolio.css
@@ -34,7 +34,7 @@
 }
 
 .link_portofolio:hover::before {
-  opacity: 0.7;
+  opacity: 0.8;
 
 }
 
@@ -48,7 +48,23 @@
   position: absolute;
   top: 100px;
   padding: 50px;
+  color: white;
   text-align: center;
+  opacity: 0;
+  transition: opacity 500ms ease-in-out;
+}
+
+.text_portofolio:hover {
+  opacity: 1;
+}
+
+.text_portofolio p {
+  text-align: center;
+}
+
+.icon_portofolio {
+  font-size: xx-large;
+  margin: 10px;
 }
 
 .img_portofolio {
