commit -m "PORTOFOLIO - couleur icone langage"

--- a/src/styles/Portofolio.css
+++ b/src/styles/Portofolio.css
@@ -67,6 +67,14 @@
   margin: 10px;
 }
 
+.html5 {
+  color: #F16528;
+}
+
+.css3 {
+  color: #2C6780;
+}
+
 .img_portofolio {
   width: 450px;
   height: 450px;
