--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,20 +1,24 @@
 .footer {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    background: rgb(179,165,152);
-    background: linear-gradient(211deg, rgba(179,165,152,1) 21%, rgba(255,255,255,1) 75%); 
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  background: rgb(179, 165, 152);
+  background: linear-gradient(
+    211deg,
+    rgba(179, 165, 152, 1) 21%,
+    rgba(255, 255, 255, 1) 75%
+  );
 }
 
 .footer_name {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .footer_name p {
-    margin-left: 5px;
+  margin-left: 5px;
 }
 
 .footer_img {
-    height: 75px;
-  }
+  height: 75px;
+}
